[package]
name = "shop_cat"
version = "0.1.0"
authors = ["alin <alinborcea2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19" }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]